syntax = "proto3";

package yandex.cloud.compute.v1;

import "google/api/annotations.proto";
import "yandex/cloud/compute/v1/zone.proto";
import "yandex/cloud/validation.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/compute/v1;compute";
option java_package = "yandex.cloud.api.compute.v1";

// A set of methods to retrieve information about availability zones.
service ZoneService {
  // Returns the information about the specified availability zone.
  //
  // To get the list of availability zones, make a [List] request.
  rpc Get (GetZoneRequest) returns (Zone) {
    option (google.api.http) = { get: "/compute/v1/zones/{zone_id}" };
  }

  // Retrieves the list of availability zones.
  rpc List (ListZonesRequest) returns (ListZonesResponse) {
    option (google.api.http) = { get: "/compute/v1/zones" };
  }
}

message ListZonesRequest {
  // The maximum number of results per page to return. If the number of available
  // results is larger than [page_size],
  // the service returns a [ListZonesResponse.next_page_token]
  // that can be used to get the next page of results in subsequent list requests.
  int64 page_size = 1 [(value) = "<=1000"];

  // Page token. To get the next page of results, set [page_token] to the
  // [ListZonesResponse.next_page_token] returned by a previous list request.
  string page_token = 2 [(length) = "<=100"];
}

message ListZonesResponse {
  // List of availability zones.
  repeated Zone zones = 1;

  // This token allows you to get the next page of results for list requests. If the number of results
  // is larger than [ListZonesRequest.page_size], use
  // the [ListZonesRequest.page_token] as the value
  // for the [ListZonesRequest.page_token] query parameter
  // in the next list request. Subsequent list requests will have their own
  // [ListZonesRequest.page_token] to continue paging through the results.
  string next_page_token = 2;
}

message GetZoneRequest {
  // ID of the availability zone to return information about.
  string zone_id = 1 [(required) = true, (length) = "<=50"];
}
